--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdi/js": "^5.9.55",
     "@mdi/react": "^1.5.0",
     "axios": "^0.21.1",
+    "html-react-parser": "^1.2.7",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
